syntax = "proto2";

package packageName;

message Message22 {
    required int64 Param1 = 1;
    required string Param2 = 2;
}

message Message33 {
    optional fixed32 Param1 = 1;
}
